infra/security-groups.tf
# This file has all security groups that let us to manage the traffic
# a security group is a virtual firewall applied to all our EC2 instances
# It handles the incoming traffic and outgoing traffic

resource "aws_security_group" "wg-a" {
  name_prefix = "wg-01"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["10.0.0.0/16"]
  }
}


resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}
